worked on the implementation of the username fragment. it is on the level of the other finished fragments now but lacks the check if the username is already taken. there, i have encountered a weird behaviour, where the username is clearly taken in the firestore but the QuerySnapshot returns 0. i also nested the fragments better into packages.

--- a/app/src/main/res/layout/fragment_family_name.xml
+++ b/app/src/main/res/layout/fragment_family_name.xml
@@ -9,14 +9,14 @@
 		
 		<variable
 			name="viewModel"
-			type="com.aresid.happyapp.signup.form.FamilyNameViewModel"
+			type="com.aresid.happyapp.signup.form.familyname.FamilyNameViewModel"
 			/>
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".signup.form.FamilyNameFragment"
+		tools:context=".signup.form.familyname.FamilyNameFragment"
 		>
 		
 		<com.google.android.material.textfield.TextInputLayout
