--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -12,7 +12,7 @@
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".signup.form.PasswordFragment"
+		tools:context=".signup.form.password.PasswordFragment"
 		>
 		
 		<com.google.android.material.textfield.TextInputLayout
