--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -106,6 +106,17 @@
 			app:layout_constraintTop_toBottomOf="@+id/login_button"
 			/>
 		
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/subscribe_button"
+			style="@style/Widget.HappyApp.OutlinedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/subscribe"
+			app:layout_constraintEnd_toEndOf="@id/guideline_end"
+			app:layout_constraintStart_toStartOf="@id/guideline_start"
+			app:layout_constraintTop_toBottomOf="@+id/forgot_login_button"
+			/>
+		
 		<TextView
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
