Implementation of the BillingRepository works so far. And great. I got the ViewPager2 showing the different Subscription offers working. I have a little bit of performance concerns there and these concerns are to address after the release. I have also changed my approach with the ViewPager2 architecture and therefore deleted the unnecessary ..ContainerFragments.

--- a/app/src/main/res/navigation/bronze_navigation_graph.xml
+++ b/app/src/main/res/navigation/bronze_navigation_graph.xml
@@ -29,6 +29,7 @@
 			app:popEnterAnim="@anim/zoom_in"
 			app:popExitAnim="@anim/fade_out"
 			/>
+		<argument android:name="bronzeSubscriptionSkuDetails"/>
 	</fragment>
 	<fragment
 		android:id="@+id/errorFragment"
