--- a/app/src/main/res/layout/fragment_bronze.xml
+++ b/app/src/main/res/layout/fragment_bronze.xml
@@ -1,15 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android="http://schemas.android.com/apk/res/android">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	>
 	
 	<data>
-	
 	</data>
 	
-	<androidx.coordinatorlayout.widget.CoordinatorLayout
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		>
-	
-	</androidx.coordinatorlayout.widget.CoordinatorLayout>
+		
+		<androidx.coordinatorlayout.widget.CoordinatorLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_margin="@dimen/margin_medium"
+			android:background="@drawable/main_fragment_shape"
+			android:elevation="8dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			>
+			
+			<androidx.fragment.app.FragmentContainerView
+				android:id="@+id/loading_fragment"
+				android:name="com.aresid.happyapp.utils.LoadingFragment"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				/>
+			
+			<androidx.fragment.app.FragmentContainerView
+				android:id="@+id/error_fragment"
+				android:name="com.aresid.happyapp.utils.errorfragment.ErrorFragment"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:visibility="gone"
+				tools:layout="@layout/fragment_error"
+				/>
+			
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/bronze_content"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:visibility="gone"
+				>
+				
+				<ImageView
+					android:id="@+id/logo"
+					android:layout_width="200dp"
+					android:layout_height="200dp"
+					android:layout_marginTop="@dimen/margin_medium"
+					android:contentDescription="@string/bronze_subscription_logo"
+					android:src="@drawable/bronze_logo"
+					app:layout_constraintEnd_toEndOf="@id/guideline_end"
+					app:layout_constraintStart_toStartOf="@id/guideline_start"
+					app:layout_constraintTop_toTopOf="@id/guideline_top"
+					/>
+				
+				<TextView
+					android:id="@+id/title_text"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/margin_large"
+					android:text="@string/happyapp_bronze"
+					android:textAlignment="center"
+					android:textAppearance="?attr/textAppearanceHeadline5"
+					app:layout_constraintEnd_toEndOf="@id/guideline_end"
+					app:layout_constraintStart_toStartOf="@id/guideline_start"
+					app:layout_constraintTop_toBottomOf="@id/logo"
+					/>
+				
+				<TextView
+					android:id="@+id/description_text"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/margin_large"
+					android:textAlignment="center"
+					android:textAppearance="?attr/textAppearanceHeadline6"
+					app:layout_constraintEnd_toEndOf="@id/guideline_end"
+					app:layout_constraintStart_toStartOf="@id/guideline_start"
+					app:layout_constraintTop_toBottomOf="@+id/title_text"
+					tools:text="Here goes the description"
+					/>
+				
+				<TextView
+					android:id="@+id/price_text"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/margin_large"
+					android:textAlignment="center"
+					android:textAppearance="?attr/textAppearanceHeadline5"
+					android:textColor="@color/bronze"
+					android:textStyle="bold"
+					app:layout_constraintEnd_toEndOf="@id/guideline_end"
+					app:layout_constraintStart_toStartOf="@id/guideline_start"
+					app:layout_constraintTop_toBottomOf="@+id/description_text"
+					tools:text="Here goes the price tag"
+					/>
+				
+				<com.google.android.material.button.MaterialButton
+					android:id="@+id/purchase_button"
+					style="@style/Widget.HappyApp.ContainedButton"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/margin_medium"
+					android:text="@string/check_this_out"
+					app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
+					app:layout_constraintEnd_toEndOf="@id/guideline_end"
+					app:layout_constraintStart_toStartOf="@id/guideline_start"
+					/>
+				
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guideline_top"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					app:layout_constraintGuide_begin="@dimen/margin_small"
+					/>
+				
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guideline_end"
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:orientation="vertical"
+					app:layout_constraintGuide_end="@dimen/margin_medium"
+					/>
+				
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guideline_bottom"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					app:layout_constraintGuide_end="@dimen/margin_small"
+					/>
+				
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guideline_start"
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:orientation="vertical"
+					app:layout_constraintGuide_begin="@dimen/margin_medium"
+					/>
+			
+			</androidx.constraintlayout.widget.ConstraintLayout>
+		</androidx.coordinatorlayout.widget.CoordinatorLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
