--- a/app/src/main/res/layout/fragment_platinum.xml
+++ b/app/src/main/res/layout/fragment_platinum.xml
@@ -6,6 +6,16 @@
 	>
 	
 	<data>
+		
+		<variable
+			name="viewModel"
+			type="com.aresid.happyapp.subscribe.platinum.PlatinumViewModel"
+			/>
+		
+		<variable
+			name="activity"
+			type="android.app.Activity"
+			/>
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -25,20 +35,14 @@
 			app:layout_constraintTop_toTopOf="parent"
 			>
 			
-			<androidx.fragment.app.FragmentContainerView
-				android:id="@+id/loading_fragment"
-				android:name="com.aresid.happyapp.utils.LoadingFragment"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				/>
-			
-			<androidx.fragment.app.FragmentContainerView
-				android:id="@+id/error_fragment"
-				android:name="com.aresid.happyapp.utils.errorfragment.ErrorFragment"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:visibility="gone"
-				tools:layout="@layout/fragment_error"
+			<ImageView
+				android:id="@+id/loading_spinner"
+				android:layout_width="96dp"
+				android:layout_height="96dp"
+				android:layout_gravity="center"
+				android:contentDescription="@string/loading"
+				android:src="@drawable/animated_loading_circle_red_black"
+				android:visibility="visible"
 				/>
 			
 			<androidx.constraintlayout.widget.ConstraintLayout
@@ -106,6 +110,7 @@
 					style="@style/Widget.HappyApp.ContainedButton"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
+					android:onClick="@{() -> viewModel.onCheckoutButtonClicked(activity)}"
 					android:layout_marginTop="@dimen/margin_medium"
 					android:text="@string/check_this_out"
 					app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
