--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -6,7 +6,11 @@
 	>
 	
 	<data>
-	
+		
+		<variable
+			name="viewModel"
+			type="com.aresid.happyapp.signup.form.password.PasswordViewModel"
+			/>
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +35,8 @@
 				android:id="@+id/password_field"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:hint="@string/username_with_star"
+				android:hint="@string/password_with_star"
+				android:text="@={viewModel.password}"
 				android:imeActionId="5"
 				android:imeOptions="actionNext"
 				android:inputType="textPassword"
@@ -43,6 +48,7 @@
 			style="@style/Widget.HappyApp.TextButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:onClick="@{() -> viewModel.onNextButtonClicked()}"
 			android:text="@string/next"
 			app:layout_constraintEnd_toEndOf="@id/guideline_end"
 			app:layout_constraintStart_toStartOf="@id/guideline_start"
