Finally, got the DateOfBirthFragment logic working. It is checking if the user is already 18, then registers the user in the Firebase, saves it's data in the Firestore and navigates to the SubscribeFragment.

--- a/app/src/main/res/layout/fragment_date_of_birth.xml
+++ b/app/src/main/res/layout/fragment_date_of_birth.xml
@@ -28,6 +28,9 @@
 			app:layout_constraintEnd_toEndOf="@id/guideline_end"
 			app:layout_constraintStart_toStartOf="@id/guideline_start"
 			app:layout_constraintTop_toTopOf="@id/guideline_top"
+			android:day="@={viewModel.day}"
+			android:month="@={viewModel.month}"
+			android:year="@={viewModel.year}"
 			/>
 		
 		<TextView
