--- a/app/src/main/res/layout/fragment_subscribe.xml
+++ b/app/src/main/res/layout/fragment_subscribe.xml
@@ -15,25 +15,48 @@
 		tools:context=".subscribe.SubscribeFragment"
 		>
 		
-		<androidx.viewpager2.widget.ViewPager2
-			android:id="@+id/view_pager_2"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			app:layout_constraintBottom_toTopOf="@id/tab_layout"
+		<ImageView
+			android:id="@+id/loading_spinner"
+			android:layout_width="96dp"
+			android:layout_height="96dp"
+			android:contentDescription="@string/loading"
+			android:src="@drawable/animated_loading_circle_red_black"
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			/>
 		
-		<com.google.android.material.tabs.TabLayout
-			android:id="@+id/tab_layout"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/content"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:tabMode="auto"
-			/>
-	
+			app:layout_constraintTop_toTopOf="parent"
+			>
+			
+			<androidx.viewpager2.widget.ViewPager2
+				android:id="@+id/view_pager_2"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toTopOf="@id/tab_layout"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				/>
+			
+			<com.google.android.material.tabs.TabLayout
+				android:id="@+id/tab_layout"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:tabMode="auto"
+				/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
