--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,14 +10,17 @@
 	tools:openDrawer="start"
 	>
 	
-	<include
-		layout="@layout/app_bar_main"
+	<androidx.fragment.app.FragmentContainerView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:id="@+id/navigation_host"
+		android:name="androidx.navigation.fragment.NavHostFragment"
+		app:defaultNavHost="true"
+		app:navGraph="@navigation/main_navigation_graph"
 		/>
 	
 	<com.google.android.material.navigation.NavigationView
-		android:id="@+id/nav_view"
+		android:id="@+id/navigation_view"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:layout_gravity="start"
