--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,31 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/drawer_layout"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:fitsSystemWindows="true"
-	tools:openDrawer="start"
 	>
 	
-	<androidx.fragment.app.FragmentContainerView
+	<data>
+	
+	</data>
+	
+	<androidx.drawerlayout.widget.DrawerLayout
+		android:id="@+id/drawer_layout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:id="@+id/navigation_host"
-		android:name="androidx.navigation.fragment.NavHostFragment"
-		app:defaultNavHost="true"
-		app:navGraph="@navigation/main_navigation_graph"
-		/>
-	
-	<com.google.android.material.navigation.NavigationView
-		android:id="@+id/navigation_view"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
-		android:layout_gravity="start"
 		android:fitsSystemWindows="true"
-		app:headerLayout="@layout/nav_header_main"
-		app:menu="@menu/activity_main_drawer"
-		/>
-</androidx.drawerlayout.widget.DrawerLayout>
+		tools:openDrawer="start"
+		>
+		
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/content"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			>
+			
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				/>
+			
+			<androidx.fragment.app.FragmentContainerView
+				android:id="@+id/navigation_host"
+				android:name="androidx.navigation.fragment.NavHostFragment"
+				android:layout_width="match_parent"
+				android:layout_height="0dp"
+				app:defaultNavHost="true"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/toolbar"
+				app:navGraph="@navigation/main_navigation_graph"
+				/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+		
+		<com.google.android.material.navigation.NavigationView
+			android:id="@+id/navigation_view"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_gravity="start"
+			android:fitsSystemWindows="true"
+			app:headerLayout="@layout/nav_header_main"
+			app:menu="@menu/activity_main_drawer"
+			/>
+	</androidx.drawerlayout.widget.DrawerLayout>
+</layout>
