--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,32 +4,39 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:showIn="navigation_view"
 	>
-	<group android:checkableBehavior="single">
+	
+	<group>
 		<item
-			android:id="@+id/nav_home"
-			android:icon="@drawable/ic_home_black_24dp"
+			android:id="@+id/nav_lobby"
 			android:title="@string/home"
 			/>
 		<item
 			android:id="@+id/nav_search"
-			android:icon="@drawable/ic_search_black_24dp"
 			android:title="@string/search"
 			/>
 		<item
 			android:id="@+id/nav_favorites"
-			android:icon="@drawable/ic_star_black_24dp"
 			android:title="@string/favorites"
 			/>
 		<item
-			android:id="@+id/nav_place_ad"
-			android:icon="@drawable/ic_launch_black_24dp"
+			android:id="@+id/nav_ad"
 			android:title="@string/submit_an_ad"
 			/>
-		<!--My Account wird beim klick auf Nav Header ausgelöst-->
-		<!--Escort Service hab ich zu der Suche hinzugefügt-->
-		<!--<item-->
-		<!--android:id="@+id/nav_escort_service"-->
-		<!--android:icon="@drawable/ic_person_add_black_24dp"-->
-		<!--android:title="@string/escort_service" />-->
 	</group>
+	<item android:title="@string/settings">
+		<menu>
+			<item
+				android:id="@+id/nav_settings"
+				android:title="@string/general"
+				/>
+			<item
+				android:id="@+id/nav_account"
+				android:title="@string/account"
+				/>
+			<item
+				android:id="@+id/nav_contact"
+				android:title="@string/contact"
+				/>
+		</menu>
+	</item>
 </menu>
