--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -57,7 +57,7 @@
 	</fragment>
 	<fragment
 		android:id="@+id/mainFragment"
-		android:name="com.aresid.happyapp.fragments.MainFragment"
+		android:name="com.aresid.happyapp.main.MainFragment"
 		android:label="MainFragment"
 		tools:layout="@layout/fragment_main"
 		/>
